# Memecoin-analyzer-

./: .gitignore  LICENSE  README.md  README_RU.md  pyproject.toml
.github/workflows/: tests.yml
examples/: synthetic_snapshot.json
src/memecoin_analyzer_demo/: __init__.py  cli.py  models.py  scoring.py
tests/: test_scoring.py
